fixed titles spacing

--- a/style.scss
+++ b/style.scss
@@ -58,7 +58,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   text-decoration: none;
 
-  line-height: 1.7;
+  line-height: 1.2;
   margin: 1em 0 15px;
   padding: 0;
 
